Remove commons-lang3 from pojogen-maven-plugin and samples/client
Replace Triple/ImmutableTriple with a private MetadataResult record in
AbstractPOJOGenMojo, replace StringUtils calls with standard Java
equivalents across both pojogen files, and replace
substringBefore/substringAfter with private static helpers in
AzureADOAuth2HttpClientFactory.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>